--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-i18n": "^8.27.2",
     "vue-router": "^3.5.1",
+    "vue-simple-alert": "^1.1.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
